refactor: swagger updates
